--- a/css/styles.css
+++ b/css/styles.css
@@ -2,14 +2,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     color: #434455;
-    background-color:#FFFFFF;
-}
-
-/* контейнер */
-.container {
-    width: 1158px;
-    padding: 0 15px;
-    margin: 0 auto;
+    background-color: #FFFFFF;
 }
 
 /* Стилі для обнулення верхніх відступів у елементів */
@@ -26,8 +19,8 @@ p {
 /* Властивості для коректного відображення картинок */
 img {
     display: block;
-    max-width: 100%;
     height: auto;
+    max-width: 100%;
 }
 
 /* Властивості для обнулення курсиву address */
@@ -49,710 +42,151 @@ address {
 
 button {
     cursor: pointer;
-}
-
-.icons-social-container{
-    display: flex;
-    justify-content: center;
-    padding: 0;
-    gap: 24px;;
-}
-
-.icon-background-container {
-    width: 40px;
-    height: 40px;
-}
-
-.icon-background {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     line-height: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    background-color: #4D5AE5;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-icon {
-    fill: #F4F4FD;
-}
+/* для кастомних радіокнопок та прихованих заголовків */
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+ }
 
-.section-team-list .icon-background:hover,
-.section-team-list .icon-background:focus {
-    background-color: #404BBF;
-}
-
-.social-container .icon-background:hover, 
-.social-container .icon-background:focus {
-    background-color: #31D0AA;
+ /* контейнер */
+.container {
+    width: 320px;
+    padding: 0 16px;
+    margin: 0 auto;
 }
 
 /*=== HEADER ===*/
 
+.menu,
+.section-address {
+    display: none;
+}
+
 .page-header {
     border-bottom: 1px solid #E7E9FC;
-    box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+    box-shadow:
+        0px 1px 6px 0px rgba(46, 47, 66, 0.08), 
+        0px 1px 1px 0px rgba(46, 47, 66, 0.16), 
+        0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 
 .page-header-container {
     display: flex;
+    align-items: center;
     justify-content: space-between;
+    padding: 16px;
 }
 
-.nav-page {
-    display: flex;
-    align-items: center;
-}
+/*--- logo ---*/
 
 .main-logo {
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
-    font-style: normal;
     font-weight: 700;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
-    margin-right: 76px;
 }
 
 .span-logo {
     color: #2e2f42;
 }
 
-.menu .studio {
-    position: relative;
-    color: #404BBF;
-}
+/*--- mobile menu ---*/
 
-.studio::after {
-    display: block;
-    position: absolute;
-    content: '';
-    left: 0;
-    bottom: -1px;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    z-index: 999;
-    background-color: #404BBF;
-}
-
-.menu, 
-.list-address {
-    display: flex;
-    gap: 40px;
-}
-
-.menu-link {
-    display: inline-block;
-    padding: 24px 0;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #2E2F42;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.menu-link:hover,
-.menu-link:focus {
-    color: #404BBF;
-}
-
-.section-address {
-    font-style: normal;
-}
-
-.address-link {
-    display: inline-block;
-    padding: 24px 0;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.address-link:hover,
-.address-link:focus {
-    color: #404BBF;
-}
-
-/* === Hero === */
-
-.hero-section {
-    max-width: 1440px;
-    margin: 0 auto;
-    padding: 188px 0;
-    background-color: #2E2F42;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.70)), 
-    url("../images/img-name.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}
-
-.hero-header {
-    margin: 0 auto 48px auto;
-    max-width: 496px;
-    text-align: center;
-    font-size: 56px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 1.07;
-    letter-spacing: 0.02em;
-    color: #FFFFFF;
-}
-
-.hero-button {
-    display: block;
-    margin: 0 auto;
-    min-width: 169px;
-    height: 56px;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.04em;  
-    background-color: #4D5AE5;
-    color: #ffffff;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    border: none;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.hero-button:hover,
-.hero-button:focus {
-    background-color: #404BBF;
-}
-
-/* === Sections === */
-
-.section {
-    padding: 120px 0;
-}
-
-.section-virtues-header,
-.section-team-header,
-.section-portfolio-header {
-    margin-bottom: 72px;
-    text-align: center;
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: #2e2f42;
-}
-
-.header-virtues,
-.header-team,
-.header-portfolio {
-    margin-bottom: 8px;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2E2F42;
-}
-
-.paragraph-virtues,
-.paragraph-team,
-.paragraph-portfolio {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-    margin-bottom: 8px;
-}
-
-/* === Section virtues === */
-
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-}
-
-.list-virtues {
-    display: flex;
-    justify-content: center;
-    gap: 24px;
-}
-
-.list-virtues-item {
-    flex-basis: calc((100% - 72px) / 4);
-}
-
-.icon-virtues-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-basis: inherit;
-    height: 112px;
-    margin-bottom: 8px;
-    border-radius: 4px;
-    border: 1px solid #8E8F99;
-    background-color:#F4F4FD;
-}
-
-.icon-virtues {
-    fill: #2E2F42;
-}
-
-/* === Section Team === */
-
-.section-team {
-    background-color: #F4F4FD;
-}
-
-.section-team-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 24px;
-}
-
-.list-team-item {
-    background-color: #FFFFFF;
-    flex-basis: calc((100% - 72px) / 4);
-    border-radius: 0px 0px 4px 4px;
-    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-}
-
-.list-team-conteiner {
-    padding: 32px 0;
-}
-
-.list-team-conteiner>.header-team,
-.list-team-conteiner>.paragraph-team {
-    text-align: center;
-}
-
-/* === Section Portfolio === */
-
-.section-portfolio-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: center;
-    column-gap: 24px;
-    row-gap: 48px;
-}
-
-.portfolio-item {
-    position: relative;
-    width: calc((100% - 48px) / 3);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-item:hover {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-.portfolio-list-conteiner {
-    padding: 32px 16px;
-    border: 1px solid #E7E9FC;
-    border-top: none;
-}
-.conteiner-overflow {
-    position: relative;
-    overflow: hidden;
-}
-
-.conteiner-overflow .paragraph-portfolio-overlay {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 40px 32px;
-    height: 300px;
-    overflow: auto;
-    color: #F4F4FD;
-    background-color: #4D5AE5;
-    transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.conteiner-overflow:hover .paragraph-portfolio-overlay {
-    transform: translateY(0);
-}
-
-/* === FOOTER === */
-
-.footer-container {
-    display: flex;
-    align-items: baseline;
-}
-
-.footer-description {
-    margin-right: 120px;
-}
-
-.page-footer {
-    padding: 100px 0;
-    background-color: #2E2F42;
-}
-
-.footer-logo {
-    display: inline-block;
-    margin-bottom: 16px;
-    color: #4d5ae5;
-}
-
-.span-footer-logo {
-    color: #f4f4fd;
-}
-
-.page-footer-paragraph {
-    max-width: 264px;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #F4F4FD;
-}
-
-.header-social-icons {
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #FFFFFF;
-    margin-bottom: 16px;
-}
-
-.social-container {
-    margin-right: 80px;
-}
-
-.social-container .icons-social-container {
-    gap: 16px;
-}
-
-/* === Subscribe === */
-
-.subscribe-text {
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    margin-bottom: 16px;
-    letter-spacing: 0.02em;
-    color: #FFFFFF;
-}
-
-.subscribe-form {
-    display: flex;
-    gap: 24px;
-}
-
-.subscriber-input {
-    width: 264px;
-    height: 40px;
-    padding-left: 16px;
-    border-radius: 4px;
-    border: 1px solid #FFFFFF;
+.mobile-menu-button {
+    border: transparent;
+    outline: transparent;
     background-color: transparent;
-    filter: 
-        drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-}
-
-.subscriber-input,
-.subscriber-input::placeholder {
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: #FFFFFF;
-}
-
-.subscribe-sumbit {
-    display: inline-flex;
-    min-width: 165px;
-    height: 40px;
-    padding: 8px 24px;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    border: none;
-    border-radius: 4px;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.64px;
-    background: #4D5AE5;
-    color: #FFFFFF;
-    fill: #FFFFFF;
-}
-
-.icon-send {
-    margin-left: 16px;
-}
-/* === BACKDROP === */
-
-.backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 999;
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-    background-color: rgba(46, 47, 66, 0.40);
-    transition: 
-        opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.backdrop.is-open {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
-}
-
-/* === MODAL === */
-
-.modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    padding: 72px 24px 24px 24px;
-    width: 408px;
-    min-height: 584px;
-    border-radius: 4px;
-    background-color: #FCFCFC;
-    box-shadow: 
-        0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 1px 3px rgba(0, 0, 0, 0.12),
-        0px 1px 2px rgba(0, 0, 0, 0.20);
-    transition: 
-        transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.close-model-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 24px;
-    right: 24px;
-    line-height: 0;
     padding: 0;
+}
+
+.mobile-menu-button {
     width: 24px;
     height: 24px;
-    border: 1px solid rgba(0, 0, 0, 0.10);;
-    border-radius: 50%;
-    background-color: #E7E9FC;
-    transition: 
-        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-close-model {
-    position: absolute;
-    fill: #2E2F42;
-    transition:
-        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.icon-burger {
+    fill: #2F2F37;
 }
 
-.close-model-button:hover,
-.close-model-button:focus {
-    border: none;
-    background-color: #404BBF;
+@media screen and (min-width: 768px) {
+    .container { 
+        width: 768px;
+    }
+
+    .main-logo { 
+        margin-right: 120px;
+    }
+
+    .mobile-menu-button {
+        display: none;
+    }
+
+    .section-address {
+        display: flex;
+    }
+
+    .nav-page {
+        display: flex;
+        align-items: center;
+    }
+
+    .menu {
+        display: flex;
+        gap: 40px;
+    }
+
+    .menu .studio {
+        position: relative;
+        color: #404BBF;
+    }
+
+    .studio::after {
+        display: block;
+        position: absolute;
+        content: '';
+        left: 0;
+        bottom: -1px;
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        z-index: 999;
+        background-color: #404BBF;
+    }
 }
 
-.close-model-button:hover .modal-icons,
-.close-model-button:focus .modal-icons { 
-    fill: #FFFFFF;
+@media screen and (min-width: 768px) and (max-width: 1158px) {
+    .list-address {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
 }
 
-.modal-description {
-    width: 360px;
-    text-align: center;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    margin-bottom: 16px;
-    color: #2E2F42;
-}
+@media screen and (min-width: 1158px) {
+    .container {
+        width: 1158px;
+    }
 
-/* === FORM CONTACTS === */
+    .main-logo {
+        margin-right: 76px;
+    }
 
-
-.modal-label,
-.modal-policy,
-.modal-input,
-.modal-input::placeholder {
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: #8E8F99;
-}
-
-.modal-input-label {
-    display: block;
-    margin-bottom: 4px;
-}
-
-.modal-input-conteiner {
-    margin-bottom: 8px;
-}
-
-.model-input-icon {
-    position: absolute;
-    top: 50%;
-    left: 16px;
-    transform: translateY(-50%);
-    fill: #2E2F42;
-    transition: 
-        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-input:focus+
-.model-input-icon {
-    fill: #4D5AE5;
-}
-
-.input-conteiner {
-    position: relative;
-}
-
-.modal-input {
-    width: 100%;
-    height: 40px;
-    padding-left: 38px;
-}
-
-.modal-textarea {
-    width: 100%;
-    height: 120px;
-    padding: 8px 16px;
-    resize: none;
-}
-
-.modal-textarea,
-.modal-textarea::placeholder {
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: rgba(46, 47, 66, 0.4);
-}
-
-.modal-input,
-.modal-textarea {
-    border-radius: 4px;
-    background-color: transparent;
-    outline: transparent;
-    border: 1px solid rgba(46, 47, 66, 0.40);
-    transition:
-        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-input:focus, 
-.modal-textarea:focus {
-    border-color: #4D5AE5;
-}
-
-.modal-comment-conteiner {
-    margin-bottom: 16px;
-}
-
-.modal-own-policy-span-check {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 16px;
-    height: 16px;
-    border-radius: 2px;
-    cursor: pointer;
-    fill: transparent;
-    margin-right: 8px;
-    border: 1px solid rgba(46, 47, 66, 0.40);
-    transition: 
-        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-check:checked+
-.modal-label>
-.modal-own-policy-span-check {
-    border: none;
-    background-color: #404BBF;
-    fill: #F4F4FD;
-}
-
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-}
-
-.modal-check-conteiner {
-    margin-bottom: 24px;
-}
-
-a.modal-policy {
-    line-height: 1.3;
-    letter-spacing: 0.04em;
-    text-decoration-line: underline;
-    color: #4D5AE5;
-}
-
-.model-submit {
-    display: block;
-    text-align: center;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    min-width: 169px;
-    height: 56px;
-    border: none;
-    border-radius: 4px;
-    margin: 0 auto;
-    color: #FFF;
-    background-color: #4D5AE5;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    transition: 
-        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.model-submit:hover,
-.model-submit:focus {
-    background-color: #404BBF;
+    .list-address {
+        display: flex;
+        gap: 40px;
+    }
 }
