--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ button {
     line-height: 0;
 }
 
-/* для кастомних радіокнопок та прихованих заголовків */
+/* для кастомних радіокнопок, прихованих заголовків і т.д. */
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -59,14 +59,117 @@ button {
     overflow: hidden;
  }
 
- /* контейнер */
 .container {
     width: 320px;
     padding: 0 16px;
     margin: 0 auto;
 }
 
-/*=== HEADER ===*/
+/*====== START SOME GLOBAL ELEMENTS ======*/
+/*--- start close button for all menu ---*/
+
+.close-model-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    line-height: 0;
+    padding: 0;
+    width: 24px;
+    height: 24px;
+    border: 1px solid rgba(0, 0, 0, 0.10);
+    border-radius: 50%;
+    background-color: #E7E9FC;
+    transition:
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-close-model {
+    position: absolute;
+    fill: #2E2F42;
+    transition:
+        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-model-button:hover,
+.close-model-button:focus {
+    border: none;
+    background-color: #404BBF;
+}
+
+.close-model-button:hover .modal-icons,
+.close-model-button:focus .modal-icons {
+    fill: #FFFFFF;
+}
+
+/*--- end close button for all menu ---*/
+
+/*------ start icons social ------*/
+
+.icons-social-container {
+    display: flex;
+    /* justify-content: center; */
+    padding: 0;
+    gap: 40px;
+}
+
+.icon-background-container {
+    width: 40px;
+    height: 40px;
+}
+
+.icon-background {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #4D5AE5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-icon {
+    fill: #F4F4FD;
+}
+
+.icon-background:focus,
+.icon-background:active {
+    background-color: #404BBF;
+}
+
+
+.section-team-list .icon-background:hover,
+.section-team-list .icon-background:focus {
+    background-color: #404BBF;
+}
+
+.social-container .icon-background:hover,
+.social-container .icon-background:focus {
+    background-color: #31D0AA;
+}
+
+/*------ end icons social ------*/
+/*====== END SOME GLOBAL ELEMENTS ======*/
+
+
+/*=== HEADER MOBILE STYLE START ===*/
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 999;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
 
 .menu,
 .section-address {
@@ -88,7 +191,7 @@ button {
     padding: 16px;
 }
 
-/*--- logo ---*/
+/*------ logo ------*/
 
 .main-logo {
     font-family: 'Raleway', sans-serif;
@@ -104,7 +207,7 @@ button {
     color: #2e2f42;
 }
 
-/*--- mobile menu ---*/
+/*------ start open mobile menu button------*/
 
 .mobile-menu-button {
     border: transparent;
@@ -121,6 +224,11 @@ button {
 .icon-burger {
     fill: #2F2F37;
 }
+
+/*------ end open mobile menu button------*/
+
+/*=== HEADER MOBILE STYLE END ===*/
+/*=== HEADER TABLET STYLE START ===*/
 
 @media screen and (min-width: 768px) {
     .container { 
@@ -168,13 +276,18 @@ button {
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1158px) {
+@media screen and
+(min-width: 768px) and
+(max-width: 1158px) {
     .list-address {
         display: flex;
         flex-direction: column;
         gap: 12px;
     }
 }
+
+/*=== HEADER TABLET STYLE END ===*/
+/*=== HEADER DESkTOP STYLE END ===*/
 
 @media screen and (min-width: 1158px) {
     .container {
@@ -189,4 +302,302 @@ button {
         display: flex;
         gap: 40px;
     }
+}
+
+
+/*=== MOBILE MENU START ===*/
+
+/* обмежую медіа щоб даремно не завантажувались стилі > mobile */
+@media screen and (max-width: 768px) {
+    .mobile-menu-conteiner {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 999;
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+        background-color: #FFF;
+    }
+    
+    .mobile-menu-conteiner.is-open {
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
+    }
+    
+    .mobile-menu {
+        position: relative;
+        padding-top: 72px;
+        padding-bottom: 40px;
+    }
+    
+    .mobile-menu-nav {
+        margin-bottom: 168px;
+    }
+    
+    .mobile-menu-section-address {
+        margin-bottom: 48px;
+    }
+    
+    .mobile-menu-nav-item:not(:last-child) {
+        margin-bottom: 40px;
+    }
+    
+    .mobile-menu-address-item:not(:last-child) {
+        margin-bottom: 24px;
+    }
+    
+    .mobile-menu-nav-list .studio {
+        color: #404BBF;
+    }
+    
+    .mobile-menu-nav-link {
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 1.1;
+        letter-spacing: 0.02em;
+        color: #2E2F42;
+    }
+    
+    .mobile-menu-nav-link:visited {
+        color: #2E2F42;
+    }
+    
+    .mobile-menu-address-link {
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #434455;
+        transition: 
+            color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .mobile-menu-address-link:hover,
+    .mobile-menu-address-link:focus,
+    .mobile-menu-address-link:active {
+        color: #4D5AE5;
+    }
+}
+
+/*=== MOBILE MENU END ===*/
+
+/* === BACKDROP === */
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    background-color: rgba(46, 47, 66, 0.40);
+    transition:
+        opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+/* === MODAL FOR ALL DEVICES === */
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 72px 24px 24px 24px;
+    width: 288px;
+    min-height: 584px;
+    border-radius: 4px;
+    background-color: #FCFCFC;
+    box-shadow:
+        0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 1px 2px rgba(0, 0, 0, 0.20);
+    transition:
+        transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+    .modal {
+        width: 408px;
+    }
+}
+
+.modal-description {
+    /* width: 360px; */
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+    color: #2E2F42;
+}
+
+/* === FORM CONTACTS === */
+
+
+.modal-label,
+.modal-policy,
+.modal-input,
+.modal-input::placeholder {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8E8F99;
+}
+
+.modal-input-label {
+    display: block;
+    margin-bottom: 4px;
+}
+
+.modal-input-conteiner {
+    margin-bottom: 8px;
+}
+
+.model-input-icon {
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+    fill: #2E2F42;
+    transition:
+        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus+.model-input-icon {
+    fill: #4D5AE5;
+}
+
+.input-conteiner {
+    position: relative;
+}
+
+.modal-input {
+    width: 100%;
+    height: 40px;
+    padding-left: 38px;
+}
+
+.modal-textarea {
+    width: 100%;
+    height: 120px;
+    padding: 8px 16px;
+    resize: none;
+}
+
+.modal-textarea,
+.modal-textarea::placeholder {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+}
+
+.modal-input,
+.modal-textarea {
+    border-radius: 4px;
+    background-color: transparent;
+    outline: transparent;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+    transition:
+        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus,
+.modal-textarea:focus {
+    border-color: #4D5AE5;
+}
+
+.modal-comment-conteiner {
+    margin-bottom: 16px;
+}
+
+.modal-own-policy-span-check {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    cursor: pointer;
+    fill: transparent;
+    margin-right: 8px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+    transition:
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-check:checked+.modal-label>.modal-own-policy-span-check {
+    border: none;
+    background-color: #404BBF;
+    fill: #F4F4FD;
+}
+
+.section-virtuess .container>.visually-hidden,
+.modal-check-conteiner>.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.modal-check-conteiner {
+    margin-bottom: 24px;
+}
+
+a.modal-policy {
+    line-height: 1.3;
+    letter-spacing: 0.04em;
+    text-decoration-line: underline;
+    color: #4D5AE5;
+}
+
+.model-submit {
+    display: block;
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    border-radius: 4px;
+    margin: 0 auto;
+    color: #FFF;
+    background-color: #4D5AE5;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    transition:
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.model-submit:hover,
+.model-submit:focus {
+    background-color: #404BBF;
 }
