--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,8 @@ button {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    transform: translateX(100%);
+    transition: transform 250ms linear;
 }
 
 @media screen and (max-width: 1158px) {
@@ -261,6 +263,16 @@ screen and (min-device-pixel-ratio: 2) {
         background-image:
             var(--background-hero-gradient),
             url("../images/mobile/img-name@2x.jpg");
+    }
+}
+
+@media screen and (min-resolution: 288dpi),
+screen and (min-resolution: 3dppx),
+screen and (min-device-pixel-ratio: 3) {
+    .hero-section {
+        background-image:
+            var(--background-hero-gradient),
+            url("../images/mobile/img-name@3x.jpg");
     }
 }
 
@@ -433,11 +445,15 @@ screen and (min-device-pixel-ratio: 2) {
 .portfolio-item {
     position: relative;
     flex-basis: 100%;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: 
+        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    box-shadow: 
+        0px 1px 6px rgba(46, 47, 66, 0.08), 
+        0px 1px 1px rgba(46, 47, 66, 0.16), 
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-list-conteiner {
@@ -697,6 +713,16 @@ screen and (min-device-pixel-ratio: 2) {
         }
     }
 
+    @media screen and (min-resolution: 288dpi),
+    screen and (min-resolution: 3dppx),
+    screen and (min-device-pixel-ratio: 3) {
+        .hero-section {
+            background-image:
+                var(--background-hero-gradient),
+                url("../images/tablet/img-name@3x.jpg");
+        }
+    }
+
     .hero-header {
         max-width: 496px;
         font-size: 56px;
@@ -736,6 +762,7 @@ screen and (min-device-pixel-ratio: 2) {
 
 /*=== FOOTER TABLET STYLE START ===*/
     .footer-container {
+        padding-left: 92px;
         flex-flow: row wrap;
         gap: 72px 24px;
     }
@@ -762,8 +789,8 @@ screen and (min-device-pixel-ratio: 2) {
 }
 
 @media screen and
-(min-width: 768px) and
-(max-width: 1158px) {
+(min-width: 767px) and
+(max-width: 1157px) {
 /*=== HEADER TABLET STYLE START ===*/
     .section-address {
         padding: 16px 0;
@@ -821,6 +848,17 @@ screen and (min-device-pixel-ratio: 2) {
                 url("../images/desktop/img-name@2x.jpg");
         }
     }
+
+    @media screen and (min-resolution: 288dpi),
+    screen and (min-resolution: 3dppx),
+    screen and (min-device-pixel-ratio: 3) {
+        .hero-section {
+            background-image:
+                var(--background-hero-gradient),
+                url("../images/desktop/img-name@3x.jpg");
+        }
+    }
+
 
     .hero-header {
         margin-bottom: 48px; 
@@ -889,6 +927,7 @@ screen and (min-device-pixel-ratio: 2) {
     }
 
     .footer-container {
+        padding-left: 0;
         gap: 0;
     }
 
@@ -914,6 +953,7 @@ screen and (min-device-pixel-ratio: 2) {
         opacity: 1;
         visibility: visible;
         pointer-events: auto;
+        transform: translateX(0);
     }
     
     .mobile-menu {
